--- a/app/assets/stylesheets/web/ost/winners/Twitter.scss
+++ b/app/assets/stylesheets/web/ost/winners/Twitter.scss
@@ -3,27 +3,35 @@
 
 .container-twitter {
   background-color: rgba(125, 213, 228, 0.2);
-  background-image: url(/twitter-bg.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: auto 50%;
+  .twitter-background {
 
-  .twitter-desc{
-    opacity: 0;
-    -webkit-transition-property: all; /* Safari */
-    -webkit-transition-duration: 500ms; /* Safari */
-    transition-property: all;
-    transition-duration: 500ms;
-    &.active{
-      opacity: 1;
+    background-image: url(/twitter-bg.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    .twitter-desc {
+      opacity: 0;
+      -webkit-transition-property: all; /* Safari */
+      -webkit-transition-duration: 200ms; /* Safari */
+      transition-property: all;
+      transition-duration: 200ms;
+      text-align: center;
+      font-size: 18px;
+      font-weight: 500;
+      &.active {
+        opacity: 1;
+      }
+
     }
-    
   }
 
   .twitter-user-img{
     border-radius:50%;
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
     @media(max-width: 576px) {
       width: 100px;
       height: 100px;
@@ -43,18 +51,10 @@
 
       .slick-slide {
         align-self: center;
-        //visibility: hidden;
-        //&.slick-active{
-        //  visibility: visible;
-        //}
         &.slick-center {
           .twitter-user-img {
             width: 100px;
             height: 100px;
-            //@media(max-width: 420px) {
-            //  width: 70px;
-            //  height: 70px;
-            //}
           }
           .twitter-handle {
             display: block;
@@ -80,6 +80,21 @@
     &:before{
       color: #34445b;
     }
+  }
+
+  .slick-arrow {
+    z-index: 1;
+    &:before {
+      font-size: 30px!important;
+    }
+  }
+
+  .slick-prev {
+    left: -35px !important
+  }
+
+  .slick-next {
+    right: -35px !important
   }
 
 }
