--- a/app/assets/stylesheets/web/ost/winners/Twitter.scss
+++ b/app/assets/stylesheets/web/ost/winners/Twitter.scss
@@ -15,9 +15,9 @@
     .twitter-desc {
       opacity: 0;
       -webkit-transition-property: all; /* Safari */
-      -webkit-transition-duration: 200ms; /* Safari */
+      -webkit-transition-duration: 500ms; /* Safari */
       transition-property: all;
-      transition-duration: 200ms;
+      transition-duration: 500ms;
       text-align: center;
       font-size: 18px;
       font-weight: 500;
@@ -41,8 +41,16 @@
 
   .twitter-handle{
     display: none;
+    opacity: 0;
+    -webkit-transition-property: all; /* Safari */
+    -webkit-transition-duration: 500ms; /* Safari */
+    transition-property: all;
+    transition-duration: 500ms;
     @media(max-width: 576px) {
       display: block;
+    }
+    &.active {
+      opacity: 1;
     }
   }
   .slick-list{
