--- a/app/views/web/ost/winners/_twitter_feed.erb
+++ b/app/views/web/ost/winners/_twitter_feed.erb
@@ -51,13 +51,27 @@
 
           %>
           <div class="row twitter-background">
-             <div class="col-12 col-md-8 mx-auto twitter-desc active"><%= twitter_users[0][:desc] %></div>
+             <div class="col-12 col-md-8 mx-auto twitter-desc active">
+               <svg class="" style="height: 20px;width: 20px;">
+                 <switch>
+                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter-open-quote-icon"></use>
+                 </switch>
+               </svg>
+               <%= twitter_users[0][:desc] %>
+               <svg class="" style="height: 20px;width: 20px;">
+                 <switch>
+                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter-close-quote-icon"></use>
+                 </switch>
+               </svg>
+             </div>
           </div>
           <div class="twitter-carousel with-placeholder container mt-3">
 
             <% twitter_users.each_with_index do |member, index| %>
               <div class="carousel-item text-center align-self-center">
-                <div class="hidden-desc d-none"><%= member[:desc] %></div>
+                <div class="hidden-desc d-none">
+                  <%= member[:desc] %>
+                </div>
                 <a  href="<%= member[:link] %>" target="_blank" class="disabled twitter-link">
                   <img class="twitter-user-img mx-auto" src="<%= member[:profile] %>"  />
                   <a href="" class="twitter-handle mt-2 active">
