--- a/app/assets/stylesheets/web/ost/winners/Twitter.scss
+++ b/app/assets/stylesheets/web/ost/winners/Twitter.scss
@@ -1,6 +1,8 @@
 // Import theme variables
 @import "../../ost_theme/variables";
 
+$animation-delay : 300ms;
+
 .container-twitter {
   background-color: rgba(125, 213, 228, 0.2);
   background-repeat: no-repeat;
@@ -15,9 +17,9 @@
     .twitter-desc {
       opacity: 0;
       -webkit-transition-property: all; /* Safari */
-      -webkit-transition-duration: 500ms; /* Safari */
+      -webkit-transition-duration: $animation-delay; /* Safari */
       transition-property: all;
-      transition-duration: 500ms;
+      transition-duration:$animation-delay;
       text-align: center;
       font-size: 18px;
       font-weight: 500;
@@ -43,9 +45,9 @@
     display: none;
     opacity: 0;
     -webkit-transition-property: all; /* Safari */
-    -webkit-transition-duration: 500ms; /* Safari */
+    -webkit-transition-duration: $animation-delay; /* Safari */
     transition-property: all;
-    transition-duration: 500ms;
+    transition-duration: $animation-delay;
     @media(max-width: 576px) {
       display: block;
     }
