--- a/app/assets/stylesheets/web/ost/winners/Twitter.scss
+++ b/app/assets/stylesheets/web/ost/winners/Twitter.scss
@@ -1,7 +1,11 @@
 // Import theme variables
 @import "../../ost_theme/variables";
 
-$animation-delay : 300ms;
+$animation-delay : 500ms;
+
+.twitter-carousel .slick-track{
+  min-height: 150px;
+}
 
 .container-twitter {
   background-color: rgba(125, 213, 228, 0.2);
@@ -65,6 +69,10 @@ $animation-delay : 300ms;
           .twitter-user-img {
             width: 100px;
             height: 100px;
+            -webkit-transition-property: all; /* Safari */
+            -webkit-transition-duration: 100ms; /* Safari */
+            transition-property: all;
+            transition-duration: 100ms;
           }
           .twitter-handle {
             display: block;
