--- a/app/views/web/ost/winners/_twitter_feed.erb
+++ b/app/views/web/ost/winners/_twitter_feed.erb
@@ -57,7 +57,7 @@
                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter-open-quote-icon"></use>
                  </switch>
                </svg>
-               <span class="desciption-text"><%= twitter_users[0][:desc] %></span>
+               <span class="description-text"><%= twitter_users[0][:desc] %></span>
                <svg class="" style="height: 20px;width: 20px;">
                  <switch>
                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter-close-quote-icon"></use>
