--- a/app/views/web/ost/winners/_subscribe.erb
+++ b/app/views/web/ost/winners/_subscribe.erb
@@ -7,16 +7,16 @@
         </div>
       </div>
       <div class="row">
-        <form action="" class="custom-form col-11 col-md-6 col-xl-6 mx-auto" id="sign-up-form">
+        <form action="/api/home/alpha3/signup" method="post" class="custom-form col-11 col-md-6 col-xl-6 mx-auto" id="sign-up-form">
 
           <div class="row">
             <div class="col-12 col-md-6">
               <div class="input-container">
                 <label>FIRST NAME</label>
-                <input class="input" id="full_name" type="text" name="full_name" value="" title="Full Name" required autocomplete="off" />
+                <input class="input" id="first_name" type="text" name="first_name" value="" title="Full Name" required autocomplete="off" />
                 <span class="input-border"></span>
               </div>
-              <div class="error" data-for="full_name"></div>
+              <div class="error" data-for="first_name"></div>
             </div>
             <div class="col-12 col-md-6">
               <div class="input-container">
@@ -65,8 +65,8 @@
           </div>
 
           <div class="form-group">
-            <label for="ost_market_communicate" class="label-cbx mb-0">
-              <input id="ost_market_communicate" type="checkbox" name="ost_market_communicate" value="agree">
+            <label for="kit_marketing" class="label-cbx mb-0">
+              <input id="kit_marketing" type="checkbox" name="kit_marketing" value="agree">
               <div class="checkbox">
                 <svg width="18px" height="18px" viewBox="0 0 20 20">
                   <path d="M3,1 L17,1 L17,1 C18.1045695,1 19,1.8954305 19,3 L19,17 L19,17 C19,18.1045695 18.1045695,19 17,19 L3,19 L3,19 C1.8954305,19 1,18.1045695 1,17 L1,3 L1,3 C1,1.8954305 1.8954305,1 3,1 Z"></path>
@@ -79,7 +79,8 @@
 
           <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
           <div class="form-group mb-0 form-recapcha">
-            <div class="g-recaptcha form-recapcha-wrap" data-sitekey="<%= GlobalConstant::Base.recaptcha['site_key'] %>"></div>
+            <div class="g-recaptcha form-recapcha-wrap"  data-callback="kyc_recaptcha_callback"
+                 data-sitekey="<%= GlobalConstant::Base.recaptcha['site_key'] %>"></div>
             <div class="error" data-for="recaptcha" style="text-align: center"></div>
           </div>
           <button type="submit" class="btn btn-primary" id="sign-up-form-submit" style="margin: 0 auto;display: block;" title="Sign Up">Sign Up</button>
@@ -113,4 +114,11 @@
   <script src="https://www.google.com/recaptcha/api.js"></script>
 <%end%>
 
+<% content_for :end_js do %>
+  <script>
+    function kyc_recaptcha_callback() {
+     $('#sign-up-form .error[data-for="recaptcha"]').text('');
+    }
+  </script>
+<% end %>
 
