--- a/app/views/shared/web/modals/_help_video.erb
+++ b/app/views/shared/web/modals/_help_video.erb
@@ -10,7 +10,7 @@
         </button>
         <!-- 16:9 aspect ratio -->
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="" id="video"  allowscriptaccess="always">></iframe>
+          <iframe class="embed-responsive-item" src="" id="video"  allowscriptaccess="always" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
 
 
