--- a/app/views/web/ost/winners/_side_by_side.erb
+++ b/app/views/web/ost/winners/_side_by_side.erb
@@ -7,6 +7,149 @@
     </div>
   </div>
 
+<%
+
+  side_by_side =  [{
+                           :title => "The Grand Winner: kidtoken",
+                           :description => "It is a good idea to think of your PC as an office. It stores files, programs, pictures. This can be compared to an actual office’s files, machines and decorations. The operating system is the boss. With this image in mind, think of an office you’ve visited that was slow and inefficient. There were probably many different reasons for the inefficiency. This is the same with a computer.  There can be many items that slow down your computer. Perhaps the one most commonly overlooked is disorganization and clutter.",
+                           :youtube_img => "video-image@3x.png",
+                           :youtube_link => "https://www.youtube.com/embed/lBKMmCQVUdo?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
+                           :participants => [
+                           {
+                               :title => "Kevin Estrada",
+                               :type  => "CEO"
+                           },
+                           {
+                               :title => "Kevin Estrada",
+                               :type  => "CEO"
+                           },
+                           {
+                               :title => "Kevin Estrada",
+                               :type  => "CEO"
+                           },
+                           {
+                               :title => "Kevin Estrada",
+                               :type  => "CEO"
+                           }
+                          ]
+                        },
+                         {
+                           :title => "The Grand Winner: kidtoken",
+                           :description => "It is a good idea to think of your PC as an office. It stores files, programs, pictures. This can be compared to an actual office’s files, machines and decorations. The operating system is the boss. With this image in mind, think of an office you’ve visited that was slow and inefficient. There were probably many different reasons for the inefficiency. This is the same with a computer.  There can be many items that slow down your computer. Perhaps the one most commonly overlooked is disorganization and clutter.",
+                           :youtube_img => "video-image@3x.png",
+                           :youtube_link => "https://www.youtube.com/embed/lBKMmCQVUdo?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
+                           :participants => [
+                           {
+                               :title => "Kevin Estrada",
+                               :type  => "CEO"
+                           },
+                           {
+                               :title => "Kevin Estrada",
+                               :type  => "CEO"
+                           },
+                           {
+                               :title => "Kevin Estrada",
+                               :type  => "CEO"
+                           },
+                           {
+                               :title => "Kevin Estrada",
+                               :type  => "CEO"
+                           }
+                       ]
+                   }
+          ]
+%>
+
+ <% side_by_side.each_with_index do |data, index| %>
+
+    <% if index%2 == 0 %>
+      <div class="row pt-5 side-by-side bg-blue">
+        <div class="container">
+          <h3 class="mb-4"><%= data[:title]%></h3>
+          <div class="row">
+            <div class="col-12 col-md-7 play-video">
+              <div class="video-image">
+                <img src="<%= data[:youtube_img]%>" class="img-fluid position-relative" alt="OST - Design Your Token" title="" />
+                <div class="play">
+                  <svg class="svg-play">
+                    <switch>
+                      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#video-play-icon"></use>
+                    </switch>
+                  </svg>
+                </div>
+              </div>
+              <div class="embed-responsive embed-responsive-16by9 video-iframe" hidden>
+                <iframe class="embed-responsive-item" data-src="<%= data[:youtube_link]%>"
+                        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              </div>
+            </div>
+            <div class="col-12 col-md-5">
+              <p><%= data[:description]%></p>
+              <a href="" class="link" target="_blank" title="CHECK THE PROJECT HERE">CHECK THE PROJECT HERE</a>
+              <% if data[:participants].present? %>
+                <div class="participants-container blue">
+                  <div>PARTICIPANTS</div>
+                  <div class="participants-carousel">
+                    <% data[:participants].each_with_index do |data, index| %>
+                      <div class="item">
+                        <div><%= data[:title]%></div>
+                        <small class="font-weight-light"><%= data[:type]%></small>
+                      </div>
+                    <%end%>
+                  </div>
+                </div>
+              <%end%>
+            </div>
+          </div>
+        </div>
+      </div>
+     <% else %>
+
+      <div class="row side-by-side bg-sky-blue position-relative">
+        <div class="ost-triangleSpace"></div>
+        <div class="ost-backward-triangle"></div>
+        <div class="container py-5">
+          <h3 class="mb-4"><%= data[:title]%></h3>
+          <div class="row">
+            <div class="col-12 col-md-5">
+              <p><%= data[:description]%></p>
+              <a href="" class="link" target="_blank" title="CHECK THE PROJECT HERE">CHECK THE PROJECT HERE</a>
+              <% if data[:participants].present? %>
+                <div class="participants-container blue">
+                  <div>PARTICIPANTS</div>
+                  <div class="participants-carousel">
+                    <% data[:participants].each_with_index do |data, index| %>
+                      <div class="item">
+                        <div><%= data[:title]%></div>
+                        <small class="font-weight-light"><%= data[:type]%></small>
+                      </div>
+                    <%end%>
+                  </div>
+                </div>
+              <%end%>
+            </div>
+            <div class="col-12 col-md-7 play-video">
+              <div class="video-image">
+                <img src="<%= data[:youtube_img]%>" class="img-fluid position-relative" alt="OST - Design Your Token" title="" />
+                <div class="play">
+                  <svg class="svg-play">
+                    <switch>
+                      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#video-play-icon"></use>
+                    </switch>
+                  </svg>
+                </div>
+              </div>
+              <div class="embed-responsive embed-responsive-16by9 video-iframe" hidden>
+                <iframe class="embed-responsive-item" data-src="<%= data[:youtube_link]%>"
+                        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+     <% end %>
+  <% end %>
+
   <div class="row pt-5 side-by-side bg-blue">
     <div class="container">
       <h3 class="mb-4">The Grand Winner: kidtoken</h3>
