--- a/app/views/web/ost/winners/_side_by_side.erb
+++ b/app/views/web/ost/winners/_side_by_side.erb
@@ -105,7 +105,7 @@
       </div>
      <% else %>
 
-      <div class="row side-by-side bg-sky-blue position-relative">
+      <div class="row side-by-side bg-sky-blue position-relative pt-5">
         <div class="ost-triangleSpace"></div>
         <div class="ost-backward-triangle"></div>
         <div class="container py-5">
@@ -206,7 +206,7 @@
     </div>
   </div>
 
-  <div class="row side-by-side bg-sky-blue position-relative">
+  <div class="row side-by-side bg-sky-blue position-relative pt-5">
     <div class="ost-triangleSpace"></div>
     <div class="ost-backward-triangle"></div>
     <div class="container py-5">
@@ -291,7 +291,7 @@
     </div>
   </div>
 
-  <div class="row side-by-side bg-sky-blue position-relative">
+  <div class="row side-by-side bg-sky-blue position-relative pt-5">
     <div class="ost-triangleSpace"></div>
     <div class="ost-backward-triangle"></div>
     <div class="container py-5">
