--- a/app/views/web/ost/winners/_twitter_feed.erb
+++ b/app/views/web/ost/winners/_twitter_feed.erb
@@ -1,6 +1,9 @@
-<section class="container-fluid container-twitter py-5">
+<section class="container-fluid container-twitter py-5 position-relative" style="overflow: hidden">
+
+  <div class="ost-backward-triangle"></div>
+
   <div class="row">
-    <div class="container">
+    <div class="container pt-5 mt-5">
       <div class="row">
         <div class="col-12 px-5">
           <%
