side by side and twitter

--- a/app/assets/stylesheets/web/ost/winners/Side_by_side.scss
+++ b/app/assets/stylesheets/web/ost/winners/Side_by_side.scss
@@ -2,6 +2,12 @@
 @import "../../ost_theme/variables";
 
 .side-by-side{
+
+  .participants-carousel {
+    max-height: 70px;
+    overflow-y: hidden;
+  }
+
   .bg-blue{
     font-size: 0.9rem;
     overflow: hidden;
