--- a/app/views/web/ost/winners/_stats.erb
+++ b/app/views/web/ost/winners/_stats.erb
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row">
         <div class="col-6 col-md-3 my-3">
-            <svg class="align-middle" style="height: 75px;width: 75px">
+            <svg class="align-middle descriptive-icons" >
               <switch>
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-applications-icon"></use>
               </switch>
@@ -14,7 +14,7 @@
             </div>
         </div>
         <div class="col-6 col-md-3 my-3">
-          <svg class="align-middle" style="height: 75px;width: 75px">
+          <svg class="align-middle descriptive-icons" >
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-accepted-icon"></use>
             </switch>
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="col-6 col-md-3 my-3">
-          <svg class="align-middle" style="height: 75px;width: 75px">
+          <svg class="align-middle descriptive-icons" >
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-days-icon"></use>
             </switch>
@@ -36,7 +36,7 @@
           </div>
         </div>
         <div class="col-6 col-md-3 my-3">
-          <svg class="align-middle" style="height: 75px;width: 75px">
+          <svg class="align-middle descriptive-icons" >
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-successful-pocs-icon"></use>
             </switch>
