--- a/app/assets/stylesheets/web/ost/winners/Stats.scss
+++ b/app/assets/stylesheets/web/ost/winners/Stats.scss
@@ -13,4 +13,14 @@
     color: $yellow-300;
     font-weight: $font-weight-light;
   }
+
+  .descriptive-icons {
+    width: 75px;
+    height: 75px;
+
+    @media (max-width: map-get($grid-breakpoints, "lg") ) {
+      width: 50px;
+      height: 50px;
+    }
+  }
 }
