--- a/app/views/web/ost/winners/_stats.erb
+++ b/app/views/web/ost/winners/_stats.erb
@@ -2,7 +2,7 @@
   <div class="row container-stats py-4">
     <div class="container">
       <div class="row">
-        <div class="col-6 col-md-3 my-3">
+        <div class="col-6 col-md-3 my-3 stats-icons-wrap">
             <svg class="align-middle descriptive-icons" >
               <switch>
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-applications-icon"></use>
@@ -13,7 +13,7 @@
               <small class="stats-desc">APPLICATIONS</small>
             </div>
         </div>
-        <div class="col-6 col-md-3 my-3">
+        <div class="col-6 col-md-3 my-3 stats-icons-wrap">
           <svg class="align-middle descriptive-icons" >
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-accepted-icon"></use>
@@ -24,7 +24,7 @@
               <small class="stats-desc">ACCEPTED</small>
             </div>
         </div>
-        <div class="col-6 col-md-3 my-3">
+        <div class="col-6 col-md-3 my-3 stats-icons-wrap">
           <svg class="align-middle descriptive-icons" >
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-days-icon"></use>
@@ -35,7 +35,7 @@
             <small class="stats-desc">DAYS</small>
           </div>
         </div>
-        <div class="col-6 col-md-3 my-3">
+        <div class="col-6 col-md-3 my-3 stats-icons-wrap">
           <svg class="align-middle descriptive-icons" >
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-successful-pocs-icon"></use>
