--- a/app/assets/stylesheets/web/ost/winners/Stats.scss
+++ b/app/assets/stylesheets/web/ost/winners/Stats.scss
@@ -14,6 +14,13 @@
     font-weight: $font-weight-light;
   }
 
+  .stats-icons-wrap {
+    @media (max-width: map-get($grid-breakpoints, "lg") ) {
+      padding-left: 5px;
+      padding-right: 5px;
+    }
+  }
+
   .descriptive-icons {
     width: 75px;
     height: 75px;
