background twitter image

--- a/app/assets/stylesheets/web/ost/winners/Twitter.scss
+++ b/app/assets/stylesheets/web/ost/winners/Twitter.scss
@@ -15,7 +15,7 @@ $animation-delay : 500ms;
   min-height: 380px;
   .twitter-background {
 
-    background-image: url(/twitter-bg.png);
+    background-image: url(https://dxwfxs8b4lg24.cloudfront.net/ost/images/winners-twitter/twitter-bg.png);
     background-repeat: no-repeat;
     background-size: 130px;
     background-position: center;
