--- a/app/views/web/ost/winners/_subscribe.erb
+++ b/app/views/web/ost/winners/_subscribe.erb
@@ -7,7 +7,7 @@
         </div>
       </div>
       <div class="row">
-        <form action="/api/home/alpha3/signup" method="post" class="custom-form col-11 col-md-6 col-xl-6 mx-auto" id="sign-up-form">
+        <form action="/api/home/alpha3/signup" method="GET" class="custom-form col-11 col-md-6 col-xl-6 mx-auto" id="sign-up-form">
 
           <div class="row">
             <div class="col-12 col-md-6">
