--- a/app/assets/stylesheets/web/ost/winners/Side_by_side.scss
+++ b/app/assets/stylesheets/web/ost/winners/Side_by_side.scss
@@ -45,8 +45,8 @@
   }
 
   .play{
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     position: absolute;
     background-color: $white;
@@ -162,6 +162,20 @@
       height: 100%;
       width: inherit;
       padding: 0 5px;
+    }
+  }
+
+  svg.svg-play {
+    height: 20px;
+    width: 20px;
+    fill: #34445B;
+  }
+
+  .video-image{
+    &:hover{
+      svg.svg-play {
+        fill: #E4B030;
+      }
     }
   }
 
