side by side and twitter

--- a/app/views/shared/web/common/_navbar.erb
+++ b/app/views/shared/web/common/_navbar.erb
@@ -56,6 +56,16 @@
               </a>
             </li>
             <li>
+              <a href="<%= GlobalConstant::Base.root_url %>challenges" class="nav-svg-link d-flex" title="Dev Challenges">
+                <svg class="nav-svg">
+                  <switch>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-dev-challenges-icon"></use>
+                  </switch>
+                </svg>
+                <span class="pl-2">Dev Challenges</span>
+              </a>
+            </li>
+            <li>
               <a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" target="_blank" class="nav-svg-link d-flex" title="White Paper">
                 <svg class="nav-svg">
                   <switch>
