--- a/app/views/web/ost/winners/_stats.erb
+++ b/app/views/web/ost/winners/_stats.erb
@@ -16,12 +16,12 @@
         <div class="col-6 col-md-3 my-3 stats-icons-wrap">
           <svg class="align-middle descriptive-icons" >
             <switch>
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-accepted-icon"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-countries-icon"></use>
             </switch>
           </svg>
             <div class="d-inline-block align-middle">
               <h4 class="stats-value" id="d2">0</h4>
-              <small class="stats-desc">ACCEPTED</small>
+              <small class="stats-desc">COUNTRIES</small>
             </div>
         </div>
         <div class="col-6 col-md-3 my-3 stats-icons-wrap">
