side by side triangle cut

--- a/app/assets/stylesheets/web/ost/winners/Side_by_side.scss
+++ b/app/assets/stylesheets/web/ost/winners/Side_by_side.scss
@@ -69,6 +69,10 @@
     position: absolute;
     left: -40px;
     right: -40px;
+    @media (min-width: 1440px){
+      top: -70px;
+      height: 130px;
+    }
     top: -35px;
     height: 100px;
     transform: rotate(0.8deg);
@@ -83,7 +87,7 @@
       transform: rotate(1.8deg);
     }
     @media (min-width: 1025px){
-      transform: rotate(2.8deg);
+      transform: rotate(2.6deg);
     }
   }
 
