side by side triangle cut

--- a/app/views/web/ost/winners/_side_by_side.erb
+++ b/app/views/web/ost/winners/_side_by_side.erb
@@ -117,7 +117,7 @@
           <div class="row">
             <div class="col-12 col-md-7 play-video">
               <div class="video-image">
-                <img src="<%= data[:youtube_img]%>" class="img-fluid position-relative" alt="OST - Design Your Token" title="" />
+                <img src="<%= data[:youtube_img]%>" class="img-fluid" alt="OST - Design Your Token" title="" />
                 <div class="play">
                   <svg class="svg-play">
                     <switch>
@@ -160,7 +160,7 @@
           <div class="row">
             <div class="col-12 col-md-7 play-video order-sm-12">
               <div class="video-image">
-                <img src="<%= data[:youtube_img]%>" class="img-fluid position-relative" alt="OST - Design Your Token" title="" />
+                <img src="<%= data[:youtube_img]%>" class="img-fluid" alt="OST - Design Your Token" title="" />
                 <div class="play">
                   <svg class="svg-play">
                     <switch>
