--- a/app/assets/stylesheets/web/ost/winners/Side_by_side.scss
+++ b/app/assets/stylesheets/web/ost/winners/Side_by_side.scss
@@ -95,6 +95,10 @@
       .slick-track{
         margin-left: 0;
       }
+
+      @media (min-width: map-get($grid-breakpoints, "sm")) and (max-width: map-get($grid-breakpoints, "lg")) {
+        margin-right: 1px;
+      }
     }
 
     &.blue{
@@ -103,7 +107,14 @@
         background: rgba(175, 225, 227, 0.2);
       }
       .item{
-        border-right: solid 0.5px #afe1e3;
+        @media (min-width: map-get($grid-breakpoints, "sm") ) {
+          border-right: solid 0.5px #afe1e3;
+        }
+      }
+      .slick-active:last-child {
+        .item {
+          border-right: none;
+        }
       }
       .slick-prev, .slick-next{
         &:before {
@@ -118,7 +129,14 @@
         background: rgba(132, 209, 212, 0.2);
       }
       .item{
-        border-right: solid 0.5px $cyan;
+        @media (min-width: map-get($grid-breakpoints, "sm") ) {
+          border-right: solid 0.5px $cyan;
+        }
+      }
+      .slick-active:last-child {
+        .item {
+          border-right: none;
+        }
       }
       .slick-prev, .slick-next{
         &:before {
@@ -136,6 +154,9 @@
       margin: 10px 0;
       text-align: left;
       padding: 0 25px;
+      @media (min-width: map-get($grid-breakpoints, "sm")) and (max-width: map-get($grid-breakpoints, "lg")) {
+        padding: 0 15px;
+      }
     }
 
     .slick-prev, .slick-next {
