--- a/app/views/web/ost/winners/_subscribe.erb
+++ b/app/views/web/ost/winners/_subscribe.erb
@@ -52,7 +52,7 @@
 
           <div class="form-group m-0">
             <label for="ost_product_communicate" class="label-cbx mb-0 w-100">
-              <input id="ost_product_communicate" type="checkbox" name="ost_product_communicate" value="agree">
+              <input id="ost_product_communicate" type="checkbox" name="ost_product_communicate" value="1">
               <div class="checkbox">
                 <svg width="18px" height="18px" viewBox="0 0 20 20">
                   <path d="M3,1 L17,1 L17,1 C18.1045695,1 19,1.8954305 19,3 L19,17 L19,17 C19,18.1045695 18.1045695,19 17,19 L3,19 L3,19 C1.8954305,19 1,18.1045695 1,17 L1,3 L1,3 C1,1.8954305 1.8954305,1 3,1 Z"></path>
@@ -66,7 +66,7 @@
 
           <div class="form-group">
             <label for="kit_marketing" class="label-cbx mb-0">
-              <input id="kit_marketing" type="checkbox" name="kit_marketing" value="agree">
+              <input id="kit_marketing" type="checkbox" name="kit_marketing" value="1">
               <div class="checkbox">
                 <svg width="18px" height="18px" viewBox="0 0 20 20">
                   <path d="M3,1 L17,1 L17,1 C18.1045695,1 19,1.8954305 19,3 L19,17 L19,17 C19,18.1045695 18.1045695,19 17,19 L3,19 L3,19 C1.8954305,19 1,18.1045695 1,17 L1,3 L1,3 C1,1.8954305 1.8954305,1 3,1 Z"></path>
