twitter outline on click

--- a/app/assets/stylesheets/web/ost/winners/Twitter.scss
+++ b/app/assets/stylesheets/web/ost/winners/Twitter.scss
@@ -68,6 +68,9 @@ $animation-delay : 500ms;
     &:hover{
       color: inherit;
     }
+    &:focus{
+      outline: none;
+    }
   }
   .slick-list{
     .slick-track {
