--- a/app/views/web/ost/winners/_stats.erb
+++ b/app/views/web/ost/winners/_stats.erb
@@ -49,7 +49,7 @@
       </div>
 
       <div class="row">
-        <div class="col-12 col-md-3 my-3 text-center text-md-left">
+        <div class="col-11 col-sm-12 mx-auto col-md-3 my-3 text-md-left">
           <svg class="align-middle" style="height: 50px;width: 50px">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-ost-icon"></use>
@@ -60,7 +60,7 @@
             <small class="stats-desc">AWARDED IN TOTAL</small>
           </div>
         </div>
-        <div class="col-12 col-md-3 my-3 text-center text-md-left">
+        <div class="col-11 col-sm-12 mx-auto col-md-3 my-3 text-md-left">
           <svg class="align-middle" style="height: 50px;width: 50px">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-ost-icon"></use>
@@ -71,7 +71,7 @@
             <small class="stats-desc">FOR GRAND WINNER POC</small>
           </div>
         </div>
-        <div class="col-12 col-md-3 my-3 text-center text-md-left">
+        <div class="col-11 col-sm-12 mx-auto col-md-3 my-3 text-md-left">
           <svg class="align-middle" style="height: 50px;width: 50px">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-ost-icon"></use>
@@ -82,7 +82,7 @@
             <small class="stats-desc">FOR SPECIAL RECOGNITION</small>
           </div>
         </div>
-        <div class="col-12 col-md-3 my-3 text-center text-md-left">
+        <div class="col-11 col-sm-12 mx-auto col-md-3 my-3 text-md-left">
           <svg class="align-middle" style="height: 50px;width: 50px">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-ost-icon"></use>
