--- a/app/assets/stylesheets/web/ost/winners/Side_by_side.scss
+++ b/app/assets/stylesheets/web/ost/winners/Side_by_side.scss
@@ -129,6 +129,12 @@
       .partners-title{
         color: $white;
       }
+      .slick-next{
+        background-image: linear-gradient(to right, rgba(76, 99, 117, 0.5), #4c6375);
+        &:hover, &:focus{
+          background-image: linear-gradient(to right, rgba(76, 99, 117, 0.5), #4c6375);
+        }
+      }
     }
 
     &.sky-blue{
@@ -154,6 +160,12 @@
       .partners-title{
         color: $blue-900;
       }
+      .slick-next{
+        background-image: linear-gradient(to right, rgba(132, 209, 212, 0.2), #84d1d4);
+        &:hover, &:focus{
+          background-image: linear-gradient(to right, rgba(132, 209, 212, 0.2), #84d1d4);
+        }
+      }
     }
 
     .partners-title{
@@ -175,11 +187,8 @@
       }
     }
 
-    .slick-prev{
+    .slick-prev, .slick-next{
       z-index: 3;
-      &:hover, &:focus {
-        background: none;
-      }
       &:before {
         display: inline-block;
         font-size: 20px;
@@ -192,15 +201,6 @@
 
     .slick-next{
       right: 0;
-      z-index: 3;
-      background-image: linear-gradient(to right, rgba(76, 99, 117, 0.5), #4c6375);
-      &:hover, &:focus{
-        background-image: linear-gradient(to right, rgba(76, 99, 117, 0.5), #4c6375);
-      }
-      &:before {
-        display: inline-block;
-        font-size: 20px;
-      }
     }
 
     .slick-arrow{
