Contact Us form - Even if I put description it shows error

--- a/app/views/web/ost/winners/_subscribe.erb
+++ b/app/views/web/ost/winners/_subscribe.erb
@@ -46,7 +46,7 @@
             <label class="mb-0 d-block">SHORT PROJECT DESCRIPTION & COMMENTS</label>
             <div class="info-text mb-3">If you have an idea about what you would like to demonstrate, let us know below.</div>
             <textarea class="w-100" id="project_description" name="project_description"
-                      title="SHORT PROJECT DESCRIPTION & COMMENTS" style="resize:none" rows="4" cols="50"></textarea>
+                      title="Short project description & comments" style="resize:none" rows="4" cols="50" required></textarea>
           </div>
           <div class="error" data-for="project_description"></div>
 
