side by side carosuel

--- a/app/assets/stylesheets/web/ost/winners/Side_by_side.scss
+++ b/app/assets/stylesheets/web/ost/winners/Side_by_side.scss
@@ -155,9 +155,9 @@
         color: $blue-900;
       }
       .slick-next{
-        background-image: linear-gradient(to right, rgba(132, 209, 212, 0.2), #84d1d4);
+        background-image: linear-gradient(to right, rgba(199, 234, 237, 0.78), #c7eaed);
         &:hover, &:focus{
-          background-image: linear-gradient(to right, rgba(132, 209, 212, 0.2), #84d1d4);
+          background-image: linear-gradient(to right, rgba(199, 234, 237, 0.78), #c7eaed);
         }
       }
     }
