twitter handle link

--- a/app/views/web/ost/winners/_twitter_feed.erb
+++ b/app/views/web/ost/winners/_twitter_feed.erb
@@ -93,13 +93,13 @@
                 </div>
                 <a  href="<%= member[:link] %>" target="_blank" class="disabled twitter-link">
                   <img class="twitter-user-img mx-auto" src="<%= member[:profile] %>"  />
-                  <a href="<%= member[:link] %>" class="twitter-handle mt-2 active" target="_blank" title="<%= member[:handle] %>">
+                  <div class="twitter-handle mt-2 active" title="<%= member[:handle] %>">
                     <svg class="align-middle mr-2" style="height: 20px;width: 20px;">
                       <switch>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter-bio-icon"></use>
                       </switch>
                     </svg><%= member[:handle] %>
-                  </a>
+                  </div>
                 </a>
               </div>
             <% end %>
